--- a/webclient/deno.json
+++ b/webclient/deno.json
@@ -20,11 +20,13 @@
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1",
+    "@tailwindcss/vite": "npm:@tailwindcss/vite@^4.1.11",
     "@types/react": "npm:@types/react@^19.1.8",
     "@types/react-dom": "npm:@types/react-dom@^19.1.6",
     "@vitejs/plugin-react": "npm:@vitejs/plugin-react@^4.6.0",
     "react": "npm:react@^19.1.0",
     "react-dom": "npm:react-dom@^19.1.0",
+    "tailwindcss": "npm:tailwindcss@^4.1.11",
     "vite": "npm:vite@^7.0.4"
   }
 }
