--- a/webclient/deno.json
+++ b/webclient/deno.json
@@ -2,6 +2,7 @@
   "tasks": {
     "dev": "deno run -A npm:vite",
     "build": "deno run -A npm:vite build"
+    "preview": "deno run -A npm:vite preview"
   },
   "nodeModulesDir": "auto",
   "compilerOptions": {
