--- a/webclient/package.json
+++ b/webclient/package.json
@@ -1,4 +1,7 @@
 {
+  "dependencies": {
+    "react-router": "^7.7.0"
+  },
   "devDependencies": {
     "tailwindcss": "^4.1.11",
     "@tailwindcss/vite": "^4.1.11"
