--- a/webclient/deno.json
+++ b/webclient/deno.json
@@ -9,7 +9,7 @@
     "types": [
       "react",
       "react-dom",
-      "react-router"
+      "@types/react"
     ],
     "lib": [
       "dom",
@@ -27,6 +27,7 @@
     "@vitejs/plugin-react": "npm:@vitejs/plugin-react@^4.6.0",
     "react": "npm:react@^19.1.0",
     "react-dom": "npm:react-dom@^19.1.0",
+    "react-router": "npm:react-router@^7.7.0",
     "tailwindcss": "npm:tailwindcss@^4.1.11",
     "vite": "npm:vite@^7.0.4"
   }
