--- a/webclient/package.json
+++ b/webclient/package.json
@@ -1,4 +1,7 @@
 {
+  "dependencies": {
+    "babel-plugin-react-compiler": "^19.1.0-rc.2"
+  },
   "devDependencies": {
     "tailwindcss": "^4.1.11",
     "@tailwindcss/vite": "^4.1.11"
