--- a/webclient/package.json
+++ b/webclient/package.json
@@ -1,9 +1,17 @@
 {
   "dependencies": {
-    "babel-plugin-react-compiler": "^19.1.0-rc.2"
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@types/node": "^24.3.0",
+    "babel-plugin-react-compiler": "^19.1.0-rc.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.542.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "tailwindcss": "^4.1.11",
-    "@tailwindcss/vite": "^4.1.11"
+    "@tailwindcss/vite": "^4.1.11",
+    "tw-animate-css": "^1.3.7"
   }
 }
