Finishes adding the radix modal

--- a/webclient/deno.json
+++ b/webclient/deno.json
@@ -26,10 +26,12 @@
         "@types/react": "npm:@types/react@^19.1.8",
         "@types/react-dom": "npm:@types/react-dom@^19.1.6",
         "@vitejs/plugin-react": "npm:@vitejs/plugin-react@^4.6.0",
+        "clsx": "npm:clsx@^2.1.1",
         "react": "npm:react@^19.1.0",
         "react-dom": "npm:react-dom@^19.1.0",
         "react-router": "npm:react-router@^7.7.0",
         "tailwindcss": "npm:tailwindcss@^4.1.11",
+        "tailwind-merge": "npm:tailwind-merge@^3.3.1",
         "vite": "npm:vite@^7.0.4"
     }
 }
