--- a/webclient/package.json
+++ b/webclient/package.json
@@ -1,7 +1,10 @@
 {
     "dependencies": {
         "@radix-ui/react-dialog": "^1.1.15",
-        "babel-plugin-react-compiler": "^19.1.0-rc.2"
+        "babel-plugin-react-compiler": "^19.1.0-rc.2",
+        "clsx": "^2.1.1",
+        "tailwind-merge": "^3.3.1",
+        "tw-animate-css": "^1.3.8"
     },
     "devDependencies": {
         "tailwindcss": "^4.1.11",
