Adds ability for multiple callback functions to be passed into a mutation, and moves category form to it's own component

--- a/webclient/deno.json
+++ b/webclient/deno.json
@@ -7,9 +7,9 @@
     "nodeModulesDir": "auto",
     "compilerOptions": {
         "types": [
+            "@types/react",
             "react",
-            "react-dom",
-            "@types/react"
+            "react-dom"
         ],
         "lib": [
             "dom",
