--- a/webclient/deno.json
+++ b/webclient/deno.json
@@ -21,6 +21,7 @@
     },
     "imports": {
         "@radix-ui/react-dialog": "npm:@radix-ui/react-dialog",
+        "@tanstack/react-form": "npm:@tanstack/react-form",
         "@std/assert": "jsr:@std/assert@1",
         "@tailwindcss/vite": "npm:@tailwindcss/vite@^4.1.11",
         "@types/react": "npm:@types/react@^19.1.8",
