--- a/webclient/deno.json
+++ b/webclient/deno.json
@@ -6,33 +6,36 @@
     },
     "nodeModulesDir": "auto",
     "compilerOptions": {
-        "types": [
-            "@types/react",
-            "react",
-            "react-dom"
-        ],
-        "lib": [
-            "dom",
-            "dom.iterable",
-            "deno.ns"
-        ],
         "jsx": "react-jsx",
         "jsxImportSource": "react"
     },
+    "fmt": {
+        "useTabs": false,
+        "lineWidth": 80,
+        "indentWidth": 4,
+        "semiColons": true,
+        "singleQuote": true,
+        "proseWrap": "preserve",
+        "include": [
+            "src/"
+        ]
+    },
     "imports": {
-        "@radix-ui/react-dialog": "npm:@radix-ui/react-dialog",
-        "@tanstack/react-form": "npm:@tanstack/react-form",
+        "@radix-ui/react-dialog": "npm:@radix-ui/react-dialog@^1.1.15",
         "@std/assert": "jsr:@std/assert@1",
-        "@tailwindcss/vite": "npm:@tailwindcss/vite@^4.1.11",
-        "@types/react": "npm:@types/react@^19.1.8",
-        "@types/react-dom": "npm:@types/react-dom@^19.1.6",
-        "@vitejs/plugin-react": "npm:@vitejs/plugin-react@^4.6.0",
+        "@tailwindcss/vite": "npm:@tailwindcss/vite@^4.1.13",
+        "@tanstack/react-form": "npm:@tanstack/react-form@^1.19.3",
+        "@types/react": "npm:@types/react@^19.1.12",
+        "@types/react-dom": "npm:@types/react-dom@^19.1.9",
+        "@vitejs/plugin-react": "npm:@vitejs/plugin-react@^5.0.2",
+        "babel-plugin-react-compiler": "npm:babel-plugin-react-compiler@^19.1.0-rc.3",
         "clsx": "npm:clsx@^2.1.1",
-        "react": "npm:react@^19.1.0",
-        "react-dom": "npm:react-dom@^19.1.0",
-        "react-router": "npm:react-router@^7.7.0",
-        "tailwindcss": "npm:tailwindcss@^4.1.11",
+        "react": "npm:react@^19.1.1",
+        "react-dom": "npm:react-dom@^19.1.1",
+        "react-router": "npm:react-router@^7.8.2",
         "tailwind-merge": "npm:tailwind-merge@^3.3.1",
-        "vite": "npm:vite@^7.0.4"
+        "tailwindcss": "npm:tailwindcss@^4.1.13",
+        "tw-animate-css": "npm:tw-animate-css@^1.3.8",
+        "vite": "npm:vite@^7.1.4"
     }
 }
