--- a/webclient/deno.json
+++ b/webclient/deno.json
@@ -7,7 +7,12 @@
     "nodeModulesDir": "auto",
     "compilerOptions": {
         "jsx": "react-jsx",
-        "jsxImportSource": "react"
+        "jsxImportSource": "react",
+        "lib": [
+            "dom",
+            "dom.iterable",
+            "deno.ns"
+        ]
     },
     "fmt": {
         "useTabs": false,
