--- a/webclient/package.json
+++ b/webclient/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "better-auth": "^1.3.18",
     "class-variance-authority": "^0.7.1",
