--- a/webclient/package.json
+++ b/webclient/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "better-auth": "^1.3.18",
@@ -22,6 +23,7 @@
     "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "recharts": "2.15.4",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.11"
   },
